--- a/ReinCore/ReinCore.csproj
+++ b/ReinCore/ReinCore.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>2.0.0.22</AssemblyVersion>
-    <FileVersion>2.0.0.22</FileVersion>
+    <AssemblyVersion>2.0.0.24</AssemblyVersion>
+    <FileVersion>2.0.0.24</FileVersion>
 	<LangVersion>Preview</LangVersion>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
