--- a/Sniper/Sniper.csproj
+++ b/Sniper/Sniper.csproj
@@ -3,13 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 	<LangVersion>Preview</LangVersion>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <AssemblyVersion>1.1.0.793</AssemblyVersion>
-    <FileVersion>1.1.0.793</FileVersion>
+    <AssemblyVersion>1.2.0.793</AssemblyVersion>
+    <FileVersion>1.2.0.793</FileVersion>
     <RootNamespace>Rein.Sniper</RootNamespace>
     <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
