updated catalog stuff

--- a/ReinCore/ReinCore.csproj
+++ b/ReinCore/ReinCore.csproj
@@ -88,6 +88,7 @@
 
   <ItemGroup>
     <Folder Include="EffectHelper\" />
+    <Folder Include="Statics\EnhancedCatalogs\" />
   </ItemGroup>
 
   <ItemGroup>
