--- a/ReinCore/ReinCore.csproj
+++ b/ReinCore/ReinCore.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>2.0.0.31</AssemblyVersion>
-    <FileVersion>2.0.0.31</FileVersion>
+    <AssemblyVersion>2.0.0.35</AssemblyVersion>
+    <FileVersion>2.0.0.35</FileVersion>
 	<LangVersion>Preview</LangVersion>
 	<Nullable>enable</Nullable>
+	  <CopyLockAssemblies>true</CopyLockAssemblies>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
